# novel-generator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.omx/: metrics.json
.omx/logs/: hooks-2026-03-27.jsonl  hooks-2026-03-28.jsonl  turns-2026-03-27.jsonl  turns-2026-03-28.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
docs/plans/: 2026-03-04-chapter-navigation-design.md
docs/superpowers/specs/: 2026-03-12-multi-agent-novel-generator-design.md
src/novel_generator/: __init__.py  main.py
src/novel_generator/evaluators/: __init__.py  consistency.py  style.py  summary.py
src/novel_generator/ouroboros/: __init__.py  adapter.py  llm.py  seed_adapter.py
src/novel_generator/phase0/: __init__.py  interview.py  plot_generator.py  prompts.py  seed_generator.py
src/novel_generator/schema/: __init__.py  chapter.py  character.py  foreshadowing.py  novel.py
src/novel_generator/state/: __init__.py  context_builder.py  store.py
web/: .env.ci  .gitignore  README.md  env.example  harness-architecture.html  package-lock.json  package.json  pipeline-visualization.html  playwright.config.ts  vercel.json  vitest.config.ts
web/__tests__/lib/: pacing-strategy.test.ts
web/__tests__/lib/agents/: chapter-quality-validator.test.ts  chapter-smoke.test.ts  critic-agent.test.ts  future-character-debate.test.ts  length-enforcer.test.ts  llm-agent.test.ts  parse-utils.test.ts  pipeline-integration.test.ts  pipeline.test.ts  plot-critic.test.ts  plot-pipeline.test.ts  plot-polisher.test.ts  (+13 more)
web/__tests__/scripts/: quick-rerun.test.ts
web/__tests__/smoke/: api-plots.test.ts  evaluate-api.test.ts  store.test.ts
web/docs/: quick-rerun.md
web/e2e/: novel-flow.spec.ts  smoke.spec.ts
web/scripts/: auto-research.ts  e2e-test.ts  generate.ts  quick-e2e.ts  quick-rerun.ts  test-info-scorer.ts
web/seeds/: test-romance-fantasy.json
web/src/app/: fonts.ts  globals.css  layout.tsx  page.tsx
web/src/hooks/: useNovelStore.ts  useStreamingGeneration.ts
(+204 files in other folders)
